// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegionContainer mapStateToProps 1`] = `
Object {
  "data": Object {
    "error": false,
    "loading": false,
    "region": Object {
      "id": "belgium",
      "isSelected": true,
    },
    "store": Object {
      "region": Object {
        "id": "belgium",
        "mapbox": Object {
          "viewport": Object {
            "latitude": 4.033,
            "longitude": 2.183,
            "zoom": 5,
          },
        },
        "name": "Belgium",
      },
    },
  },
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "color": "black",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "height": -32,
    "textDecoration": "none",
    "width": -32,
  },
}
`;

exports[`RegionContainer query 1`] = `
Object {
  "data": Object {
    "store": Object {
      "__typename": "Store",
      "region": Object {
        "__typename": "Region",
        "id": "belgium",
        "mapbox": Object {
          "__typename": "Mapbox",
          "viewport": Object {
            "__typename": "Viewport",
            "latitude": 4.033,
            "longitude": 2.183,
            "zoom": 5,
            Symbol(id): "$Region:belgium.mapbox.viewport",
          },
          Symbol(id): "$Region:belgium.mapbox",
        },
        "name": "Belgium",
        Symbol(id): "Region:belgium",
      },
      Symbol(id): "$ROOT_QUERY.store",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;

exports[`RegionContainer render 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "region": Object {
      "id": "belgium",
      "isSelected": true,
    },
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "regionId": "belgium",
    },
  },
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "color": "black",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "height": -32,
    "textDecoration": "none",
    "width": -32,
  },
}
`;

exports[`RegionContainer render 2`] = `
Object {
  "children": <Connect(Apollo(Sankey))
    region={
      Object {
        "__typename": "Region",
        "id": "belgium",
        "mapbox": Object {
          "__typename": "Mapbox",
          "viewport": Object {
            "__typename": "Viewport",
            "latitude": 4.033,
            "longitude": 2.183,
            "zoom": 5,
            Symbol(id): "$Region:belgium.mapbox.viewport",
          },
          Symbol(id): "$Region:belgium.mapbox",
        },
        "name": "Belgium",
        Symbol(id): "Region:belgium",
      }
    }
    style={
      Object {
        "height": -32,
        "width": -32,
      }
    }
  />,
  "className": "region-mapbox-outer",
  "style": Object {
    "height": "100%",
    "width": "100%",
  },
}
`;

exports[`RegionContainer renderError 1`] = `
Object {
  "data": Object {
    "error": undefined,
    "fetchMore": [Function],
    "loading": true,
    "networkStatus": 1,
    "refetch": [Function],
    "region": Object {
      "id": "foo",
      "isSelected": true,
    },
    "startPolling": [Function],
    "stopPolling": [Function],
    "subscribeToMore": [Function],
    "updateQuery": [Function],
    "variables": Object {
      "regionId": "foo",
    },
  },
  "style": Object {
    "MozAppearance": "none",
    "WebkitAppearance": "none",
    "color": "black",
    "fontFamily": "inherit",
    "fontSize": "inherit",
    "height": -32,
    "textDecoration": "none",
    "width": -32,
  },
}
`;
